test/analyzer/input_programs/invalid_programs/program07.tea
x := [1, 2, 3]
y := "abc"
# not mutually compatible types
z := x isnt y